Added the ability to store the user's password when a new user is created.
